<resources>
    <string name="app_name">CaffeUseExample</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="classify_pic_str">Classification</string>
    <string name="classification_received_str"></string>
    <string name="request_classification_button_str">Classify Pic!</string>
    <string name="classify_pic_request_str">Choose the image</string>
    <string name="choose_image_button_str">Choose the image</string>
    <string name="take_image_button_str">Take new image</string>

    <string name="image_classified_desc">Classified Image</string>
    <string name="request_classification_button_desc">Button to send the request</string>
    <string name="choose_image_button_desc">Button to choose the image</string>
    <string name="take_image_button_desc">Button to take a new image</string>

    <string name="album_name">CaffeExample</string>
</resources>
